# emile

./: .gitignore  Cargo.toml  README.md  azure-pipelines.yml
.github/workflows/: release.yaml
src/: cmd.rs  config.rs  git.rs  main.rs  new.rs  opt.rs  post.rs  publish.rs  reslug.rs  schedule.rs  scheduler.rs  watcher.rs
src/social/: bluesky.rs  mastodon.rs  mod.rs
