[package]
name = "emile"
version = "0.4.5"
authors = ["Geobert Quach <geobert@proton.me>"]
edition = "2021"

[badges]
azure-devops = { project = "geobert/emile", pipeline = "emile-CI", build = "2" }

[dependencies]
anyhow = "1.0.80"
toml = "0.7"
serde = "1.0.197"
serde_derive = "1.0.197"
slug = "0.1.5"
notify = { version = "5.2.0", default-features = false }
clap = { version = "4.5.2", features = ["derive"] }
time = { version = "0.3.34", features = ["formatting", "parsing", "macros"] }
lazy_static = "1.4.0"
tokio = { version = "1.36.0", features = ["sync", "macros", "rt-multi-thread", "time"] }
notify-debouncer-mini = { version = "0.2.1", default-features = false }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["std", "env-filter", "fmt", "smallvec", "parking_lot", "registry", "time"] }
once_cell = "1.19.0"
reqwest = { version = "0.11.25", default-features = false, features = ["json", "rustls-tls"] }
sha2 = "0.10.8"

